# Dense-3D-Reconstruction

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
configs/: default.yaml
data/images/: ground_truth_cameras.txt
scripts/: benchmark.py  download_dataset.py  generate_test_data.py  run_pipeline.py
src/: __init__.py  pipeline.py
src/cpp/: point_cloud_filter.cpp  statistical_outlier_removal.cpp
src/cpp/include/: dense3d.h
src/features/: __init__.py  base.py  factory.py  orb.py  sift.py  superpoint.py
src/matching/: __init__.py  base.py  bf_matcher.py  factory.py  flann_matcher.py  superglue.py
src/mvs/: __init__.py  colmap_mvs.py  dense_reconstruction.py
src/reconstruction/: __init__.py  mesh_generator.py  point_cloud_processor.py
src/sfm/: __init__.py  camera.py  colmap_sfm.py  sparse_reconstruction.py
src/utils/: __init__.py  config.py  io_utils.py  logger.py  timer.py
src/visualization/: __init__.py  camera_trajectory.py  match_visualizer.py  viewer.py
